--- a/drew.html
+++ b/drew.html
@@ -7,82 +7,63 @@
 
 <style>
   :root {
-    --neon-blue: #25F2FF;
-    --bg-black: #000000;
-  }
-
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    --neon-pink: #E81D89;
+    --neon-pink-soft: rgba(232,29,137,0.55);
+    --ink-shadow: rgba(232,29,137,0.85);
   }
 
   html, body {
+    margin: 0;
     width: 100%;
-    min-height: 100%;
-    font-family: system-ui, sans-serif;
-    color: #fff;
-    overflow-x: hidden;
     background: #000;
+    color: #fff;
+    font-family: system-ui, sans-serif;
   }
 
   body {
     background-image: url("peacockedit.jpeg");
     background-size: cover;
-    background-position: center;
     background-repeat: repeat-y;
+    background-position: center;
   }
 
   .page {
-    position: relative;
     padding: 10vh 6vw 14vh;
     display: flex;
     flex-direction: column;
-    gap: 50px;
     align-items: center;
+    gap: 50px;
   }
 
   /* HERO */
   .hero {
-    width: 100%;
     max-width: 1100px;
     text-align: center;
     background: rgba(0,0,0,0.42);
-    border-radius: 18px;
     padding: 40px 32px;
-    border: 1px solid rgba(37,242,255,0.3);
+    border-radius: 18px;
+    border: 1px solid rgba(232,29,137,0.3);
     backdrop-filter: blur(3px);
-    box-shadow: 0 0 24px rgba(0,0,0,0.7);
   }
 
   .heading {
     font-size: clamp(60px, 10vw, 130px);
     font-weight: 900;
-    color: var(--neon-blue);
-    text-transform: uppercase;
+    color: var(--neon-pink);
     text-shadow:
-      0 0 25px rgba(37,242,255,1),
-      0 0 60px rgba(37,242,255,0.7);
-    margin-bottom: 12px;
+      0 0 12px var(--neon-pink-soft),
+      0 0 32px rgba(232,29,137,0.38);
   }
 
   .divider {
     width: 160px;
     height: 3px;
-    margin: 0 auto 18px;
-    background: var(--neon-blue);
-    box-shadow: 0 0 20px rgba(37,242,255,0.9);
+    margin: 14px auto 18px;
+    background: var(--neon-pink);
+    box-shadow: 0 0 14px var(--neon-pink-soft);
     border-radius: 3px;
   }
 
-  .subheading {
-    max-width: 780px;
-    margin: 0 auto;
-    line-height: 1.7;
-    opacity: 0.95;
-  }
-
-  /* ACCORDION */
   .accordion-wrapper {
     width: 100%;
     max-width: 900px;
@@ -92,79 +73,70 @@
   }
 
   .accordion-item {
-    border-radius: 14px;
-    background: transparent;
-    overflow: visible;
     position: relative;
   }
 
   .accordion-header {
-    background: var(--bg-black);
+    background: #000;
     border-radius: 14px;
-    border: 2px solid rgba(37,242,255,0.7);
-    cursor: pointer;
-    padding: 18px 26px;
-    position: relative;
+    padding: 20px 26px;
+    border: 2px solid var(--neon-pink-soft);
     display: flex;
     justify-content: center;
+    cursor: pointer;
     transition: all .25s ease;
-    box-shadow: 0 0 18px rgba(37,242,255,0.25);
+    box-shadow: 0 0 18px rgba(232,29,137,0.18);
   }
 
   .accordion-header:hover {
-    border-color: rgba(37,242,255,1);
+    border-color: var(--neon-pink);
     box-shadow:
-      0 0 40px rgba(37,242,255,1),
-      0 0 80px rgba(37,242,255,0.6);
+      0 0 28px rgba(232,29,137,0.75),
+      0 0 48px rgba(232,29,137,0.35);
     transform: translateY(-2px);
   }
 
   .accordion-label {
     font-size: clamp(20px, 2.3vw, 28px);
-    text-transform: uppercase;
     letter-spacing: 0.18em;
-    color: var(--neon-blue);
-    text-shadow:
-      0 0 10px rgba(37,242,255,1),
-      0 0 24px rgba(37,242,255,0.8);
+    color: var(--neon-pink);
+    text-transform: uppercase;
+    text-shadow: 0 0 15px var(--neon-pink-soft);
     position: relative;
-    padding-bottom: 6px;
+    display: inline-block;
   }
 
-  /* ✨ Ink Drip on Hover Only */
-  .accordion-header:hover .accordion-label::after {
+  /* 🔥 Neon Ink Dripping Effect from Letters */
+  .accordion-header:hover .accordion-label::before {
     content: "";
     position: absolute;
     left: 50%;
-    top: 100%;
-    transform: translateX(-50%);
-    width: 4px;
-    height: 0;
-    background: var(--neon-blue);
-    border-radius: 50px;
-    animation: inkDrip 1.3s cubic-bezier(.25,1.5,.32,1) forwards;
-    box-shadow:
-      0 0 14px rgba(37,242,255,1),
-      0 0 40px rgba(37,242,255,0.7);
+    top: 70%;
+    width: 8px;
+    height: 8px;
+    background: var(--neon-pink);
+    border-radius: 50%;
+    filter: drop-shadow(0 0 14px var(--ink-shadow));
+    animation: dripFall 1.1s ease-in forwards;
   }
 
-  @keyframes inkDrip {
-    0% { height: 0; opacity: 0; }
-    40% { height: 36px; opacity: 1; }
-    90% { height: 6px; transform: translate(-50%,50px); opacity: .6; }
-    100% { height: 0; transform: translate(-50%,60px); opacity: 0; }
+  @keyframes dripFall {
+    0% { transform: translate(-50%,0) scale(1); opacity: 1; }
+    65% { transform: translate(-50%,34px) scale(0.9); opacity: .8; }
+    100% { transform: translate(-50%,48px) scale(0.3); opacity: 0; }
   }
 
+  /* Expandable Content */
   .accordion-content {
     max-height: 0;
     overflow: hidden;
-    background: rgba(0,0,0,0.88);
-    border-radius: 0 0 14px 14px;
-    border: 2px solid rgba(37,242,255,0.35);
+    background: rgba(0,0,0,0.85);
+    border: 2px solid rgba(232,29,137,0.25);
     border-top: none;
     margin-top: -2px;
     padding: 0 24px;
-    transition: max-height .32s ease, padding .25s ease;
+    border-radius: 0 0 14px 14px;
+    transition: max-height .3s ease, padding .25s ease;
   }
 
   .accordion-content.open {
@@ -175,101 +147,72 @@
   .accordion-text {
     text-align: center;
     line-height: 1.7;
+    opacity: 0.92;
   }
 
-  @media(max-width:768px) {
-    .page{gap:36px}
-    .hero{padding:30px 20px}
-    .accordion-header{padding:14px 16px}
-    .accordion-content.open{padding:16px 18px 20px}
-  }
 </style>
 </head>
 
 <body>
 <div class="page">
 
+  <!-- HERO -->
   <section class="hero">
     <div class="heading">$DREW</div>
     <div class="divider"></div>
-    <p class="subheading">
-      Our mission is to build a strong and united community supporting men’s mental health.<br>
-      Donations are chosen by the community — driven by $DREW holders.
-    </p>
+    <p class="subheading">Supporting men’s mental health through community-driven action.</p>
   </section>
 
+  <!-- ACCORDION -->
   <section class="accordion-wrapper">
 
-    <!-- Mission -->
     <div class="accordion-item">
       <div class="accordion-header">
         <span class="accordion-label">MISSION</span>
       </div>
-      <div class="accordion-content">
-        <p class="accordion-text">
-          $DREW exists to spark a ripple effect through the minds of men — a reminder that we’re all
-          in this beautiful work of art together.
-        </p>
-      </div>
+      <div class="accordion-content"><p class="accordion-text">Our purpose is to start conversations…</p></div>
     </div>
 
-    <!-- Community -->
     <div class="accordion-item">
       <div class="accordion-header">
         <span class="accordion-label">COMMUNITY</span>
       </div>
-      <div class="accordion-content">
-        <p class="accordion-text">
-          The $DREW community leads from the front: holders choose charities and shape culture.
-        </p>
-      </div>
+      <div class="accordion-content"><p class="accordion-text">Holders lead and vote on initiatives…</p></div>
     </div>
 
-    <!-- Roadmap -->
     <div class="accordion-item">
       <div class="accordion-header" onclick="window.location='roadmap.html'">
         <span class="accordion-label">ROADMAP</span>
       </div>
     </div>
 
-    <!-- NFTs -->
     <div class="accordion-item">
       <div class="accordion-header">
         <span class="accordion-label">NFTS</span>
       </div>
-      <div class="accordion-content">
-        <p class="accordion-text">
-          888 genesis pieces — access pass to the movement.
-        </p>
-      </div>
+      <div class="accordion-content"><p class="accordion-text">888 genesis access NFTs…</p></div>
     </div>
 
-    <!-- TOKEN -->
     <div class="accordion-item">
       <div class="accordion-header">
         <span class="accordion-label">TOKEN</span>
       </div>
-      <div class="accordion-content">
-        <p class="accordion-text">
-          Designed to reward committed holders and drive voting power for donations.
-        </p>
-      </div>
+      <div class="accordion-content"><p class="accordion-text">$DREW rewards committed holders…</p></div>
     </div>
 
   </section>
-
 </div>
 
 <script>
-  document.querySelectorAll('.accordion-item').forEach(item => {
-    const header = item.querySelector('.accordion-header');
-    const content = item.querySelector('.accordion-content');
-    if (!content) return;
+document.querySelectorAll('.accordion-item').forEach(item => {
+  const header = item.querySelector('.accordion-header');
+  const content = item.querySelector('.accordion-content');
+  if (!content) return;
 
-    header.addEventListener('click', () => {
-      content.classList.toggle('open');
-    });
+  header.addEventListener('click', () => {
+    content.classList.toggle('open');
   });
+});
 </script>
 
 </body>
