--- a/drew.html
+++ b/drew.html
@@ -8,41 +8,99 @@
 <style>
   :root {
     --neon-pink: #E81D89;
-    --neon-pink-soft: rgba(232,29,137,0.55);
-    --ink-shadow: rgba(232,29,137,0.85);
+    --neon-pink-soft: rgba(232,29,137,0.4);
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   html, body {
-    margin: 0;
     width: 100%;
+    min-height: 100%;
     background: #000;
-    color: #fff;
     font-family: system-ui, sans-serif;
+    scroll-behavior: smooth;
+    color: #fff;
   }
 
   body {
     background-image: url("peacockedit.jpeg");
     background-size: cover;
-    background-repeat: repeat-y;
     background-position: center;
+    background-repeat: repeat-y;
   }
 
+  /* 🔥 Sticky Top Header */
+  .sticky-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 14px 0;
+    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.4);
+    border-bottom: 1px solid rgba(232,29,137,0.25);
+    display: flex;
+    justify-content: center;
+    z-index: 9999;
+  }
+
+  /* Fun neon title */
+  .top-title {
+    font-size: clamp(32px, 7vw, 56px);
+    font-weight: 900;
+    font-family: "Impact", "Anton", sans-serif;
+    letter-spacing: 0.1em;
+    color: var(--neon-pink);
+    text-transform: uppercase;
+    cursor: pointer;
+    text-shadow:
+      0 0 14px var(--neon-pink-soft),
+      0 0 34px rgba(232,29,137,0.6);
+    position: relative;
+  }
+
+  /* Ink drip from title */
+  .top-title:hover::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 80%;
+    width: 8px;
+    height: 8px;
+    background: var(--neon-pink);
+    border-radius: 50%;
+    filter: drop-shadow(0 0 12px rgba(232,29,137,0.9));
+    transform: translateX(-50%);
+    animation: dripFall 1.3s ease forwards;
+  }
+
+  @keyframes dripFall {
+    0% { transform: translate(-50%,0) scale(1); opacity: 1; }
+    70% { transform: translate(-50%,40px) scale(0.9); opacity: .8; }
+    100% { transform: translate(-50%,60px) scale(0.2); opacity: 0; }
+  }
+
+  /* MAIN PAGE LAYOUT */
   .page {
-    padding: 10vh 6vw 14vh;
+    padding: 18vh 6vw 14vh; /* extra top spacing for sticky header */
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 50px;
+    align-items: center;
   }
 
   /* HERO */
   .hero {
+    width: 100%;
     max-width: 1100px;
     text-align: center;
     background: rgba(0,0,0,0.42);
-    padding: 40px 32px;
     border-radius: 18px;
-    border: 1px solid rgba(232,29,137,0.3);
+    padding: 40px 32px;
+    border: 1px solid rgba(232,29,137,0.25);
     backdrop-filter: blur(3px);
   }
 
@@ -50,170 +108,47 @@
     font-size: clamp(60px, 10vw, 130px);
     font-weight: 900;
     color: var(--neon-pink);
-    text-shadow:
-      0 0 12px var(--neon-pink-soft),
-      0 0 32px rgba(232,29,137,0.38);
+    text-shadow: 0 0 22px var(--neon-pink-soft);
   }
 
   .divider {
     width: 160px;
     height: 3px;
-    margin: 14px auto 18px;
     background: var(--neon-pink);
-    box-shadow: 0 0 14px var(--neon-pink-soft);
+    margin: 14px auto 18px;
+    box-shadow: 0 0 18px var(--neon-pink-soft);
     border-radius: 3px;
   }
 
-  .accordion-wrapper {
-    width: 100%;
-    max-width: 900px;
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-  }
-
-  .accordion-item {
-    position: relative;
-  }
-
-  .accordion-header {
-    background: #000;
-    border-radius: 14px;
-    padding: 20px 26px;
-    border: 2px solid var(--neon-pink-soft);
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    transition: all .25s ease;
-    box-shadow: 0 0 18px rgba(232,29,137,0.18);
-  }
-
-  .accordion-header:hover {
-    border-color: var(--neon-pink);
-    box-shadow:
-      0 0 28px rgba(232,29,137,0.75),
-      0 0 48px rgba(232,29,137,0.35);
-    transform: translateY(-2px);
-  }
-
-  .accordion-label {
-    font-size: clamp(20px, 2.3vw, 28px);
-    letter-spacing: 0.18em;
-    color: var(--neon-pink);
-    text-transform: uppercase;
-    text-shadow: 0 0 15px var(--neon-pink-soft);
-    position: relative;
-    display: inline-block;
-  }
-
-  /* 🔥 Neon Ink Dripping Effect from Letters */
-  .accordion-header:hover .accordion-label::before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 70%;
-    width: 8px;
-    height: 8px;
-    background: var(--neon-pink);
-    border-radius: 50%;
-    filter: drop-shadow(0 0 14px var(--ink-shadow));
-    animation: dripFall 1.1s ease-in forwards;
-  }
-
-  @keyframes dripFall {
-    0% { transform: translate(-50%,0) scale(1); opacity: 1; }
-    65% { transform: translate(-50%,34px) scale(0.9); opacity: .8; }
-    100% { transform: translate(-50%,48px) scale(0.3); opacity: 0; }
-  }
-
-  /* Expandable Content */
-  .accordion-content {
-    max-height: 0;
-    overflow: hidden;
-    background: rgba(0,0,0,0.85);
-    border: 2px solid rgba(232,29,137,0.25);
-    border-top: none;
-    margin-top: -2px;
-    padding: 0 24px;
-    border-radius: 0 0 14px 14px;
-    transition: max-height .3s ease, padding .25s ease;
-  }
-
-  .accordion-content.open {
-    max-height: 260px;
-    padding: 20px 24px 24px;
-  }
-
-  .accordion-text {
-    text-align: center;
+  .subheading {
+    opacity: 0.95;
     line-height: 1.7;
-    opacity: 0.92;
   }
 
 </style>
 </head>
 
 <body>
+
+<!-- 🔥 Sticky Header -->
+<div class="sticky-header">
+  <div class="top-title" onclick="window.scrollTo({top:0, behavior:'smooth'});">
+    $DREW
+  </div>
+</div>
+
 <div class="page">
 
-  <!-- HERO -->
   <section class="hero">
     <div class="heading">$DREW</div>
     <div class="divider"></div>
-    <p class="subheading">Supporting men’s mental health through community-driven action.</p>
+    <p class="subheading">
+      Our mission is to build a strong and united community supporting men’s mental health.<br>
+      Donations are chosen by the community — driven by $DREW holders.
+    </p>
   </section>
 
-  <!-- ACCORDION -->
-  <section class="accordion-wrapper">
-
-    <div class="accordion-item">
-      <div class="accordion-header">
-        <span class="accordion-label">MISSION</span>
-      </div>
-      <div class="accordion-content"><p class="accordion-text">Our purpose is to start conversations…</p></div>
-    </div>
-
-    <div class="accordion-item">
-      <div class="accordion-header">
-        <span class="accordion-label">COMMUNITY</span>
-      </div>
-      <div class="accordion-content"><p class="accordion-text">Holders lead and vote on initiatives…</p></div>
-    </div>
-
-    <div class="accordion-item">
-      <div class="accordion-header" onclick="window.location='roadmap.html'">
-        <span class="accordion-label">ROADMAP</span>
-      </div>
-    </div>
-
-    <div class="accordion-item">
-      <div class="accordion-header">
-        <span class="accordion-label">NFTS</span>
-      </div>
-      <div class="accordion-content"><p class="accordion-text">888 genesis access NFTs…</p></div>
-    </div>
-
-    <div class="accordion-item">
-      <div class="accordion-header">
-        <span class="accordion-label">TOKEN</span>
-      </div>
-      <div class="accordion-content"><p class="accordion-text">$DREW rewards committed holders…</p></div>
-    </div>
-
-  </section>
 </div>
-
-<script>
-document.querySelectorAll('.accordion-item').forEach(item => {
-  const header = item.querySelector('.accordion-header');
-  const content = item.querySelector('.accordion-content');
-  if (!content) return;
-
-  header.addEventListener('click', () => {
-    content.classList.toggle('open');
-  });
-});
-</script>
 
 </body>
 </html>
