--- a/drew.html
+++ b/drew.html
@@ -13,7 +13,7 @@
   }
 
   * { margin: 0; padding: 0; box-sizing: border-box; }
-  html, body { width: 100%; min-height: 100%; scroll-behavior: smooth; background: #000; font-family: system-ui, sans-serif; color: #fff; }
+  html, body { width: 100%; min-height: 100%; background: #000; scroll-behavior: smooth; font-family: system-ui, sans-serif; color: #fff; }
 
   body {
     background-image: url("peacockedit.jpeg");
@@ -27,106 +27,121 @@
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 14px 0;
-    background: rgba(0,0,0,0.35);
-    backdrop-filter: blur(10px);
-    border-bottom: 1px solid rgba(232,29,137,0.25);
+    padding: 16px 4vw;
+    background: rgba(0,0,0,0.4);
+    backdrop-filter: blur(12px);
+    border-bottom: 1px solid rgba(232,29,137,0.3);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     z-index: 9999;
   }
 
+  /* 🔥 Neon Title */
   .top-title {
-    font-size: clamp(32px, 6vw, 58px);
-    font-family: "Impact","Anton",sans-serif;
+    font-size: clamp(32px, 4vw, 48px);
     font-weight: 900;
-    color: var(--neon-pink);
     letter-spacing: .1em;
+    color: var(--neon-pink);
     cursor: pointer;
-    text-transform: uppercase;
-    text-shadow:
-      0 0 12px var(--neon-pink-soft),
-      0 0 26px rgba(232,29,137,0.55);
+    text-shadow: 0 0 14px var(--neon-pink-soft);
     position: relative;
   }
 
   .top-title:hover::after {
     content: "";
     position: absolute;
+    top: 100%;
     left: 50%;
-    top: 80%;
     width: 9px;
     height: 9px;
     background: var(--neon-pink);
     border-radius: 50%;
-    filter: drop-shadow(0 0 12px rgba(232,29,137,0.8));
     transform: translateX(-50%);
+    filter: drop-shadow(0 0 12px var(--neon-pink));
     animation: dripFall 1.3s ease forwards;
   }
 
+  /* 🔗 Header Nav Links */
+  .nav-links {
+    display: flex;
+    gap: 28px;
+    align-items: center;
+  }
+
+  .nav-link {
+    font-size: clamp(14px, 2vw, 18px);
+    text-transform: uppercase;
+    letter-spacing: .18em;
+    cursor: pointer;
+    color: var(--neon-pink);
+    text-shadow: 0 0 10px var(--neon-pink-soft);
+    position: relative;
+  }
+
+  .nav-link:hover::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 5px;
+    height: 5px;
+    background: var(--neon-pink);
+    border-radius: 50%;
+    transform: translateX(-50%);
+    animation: dripFall .9s ease forwards;
+  }
+
   @keyframes dripFall {
-    0% { transform: translate(-50%,0) scale(1); opacity: 1; }
-    70% { transform: translate(-50%,38px) scale(.8); opacity: .7; }
-    100%{ transform: translate(-50%,58px) scale(.2); opacity: 0; }
+    0% { opacity: 1; transform: translate(-50%,0) scale(1); }
+    60% { opacity: .75; transform: translate(-50%,28px) scale(.75); }
+    100% { opacity: 0; transform: translate(-50%,42px) scale(.2); }
   }
 
   .page {
     padding: 20vh 6vw 14vh;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
     align-items: center;
   }
 
-  /* HERO */
-  .hero {
-    background: rgba(0,0,0,0.42);
-    padding: 40px 32px;
-    border-radius: 18px;
-    text-align: center;
-    border: 1px solid rgba(232,29,137,0.25);
-    backdrop-filter: blur(3px);
-  }
-
-  .heading { font-size: clamp(60px,10vw,130px); font-weight:900; color:var(--neon-pink); text-shadow:0 0 20px var(--neon-pink-soft); }
-  .divider { width:160px;height:3px;margin:14px auto;background:var(--neon-pink);box-shadow:0 0 14px var(--neon-pink-soft);border-radius:3px; }
-
+  /* 🔥 Accordion Sections */
   .accordion-wrapper {
     width: 100%;
     max-width: 900px;
     display: flex;
     flex-direction: column;
-    gap: 14px;
+    gap: 16px;
   }
 
-  /* Neon Expand Boxes */
   .accordion-header {
     background:#000;
+    padding:20px;
     border-radius:14px;
-    padding:20px 26px;
     border:2px solid var(--neon-border);
     cursor:pointer;
     display:flex;
     justify-content:center;
     transition:.25s;
-    box-shadow:0 0 16px rgba(232,29,137,0.25);
+    box-shadow:0 0 18px rgba(232,29,137,0.3);
   }
+
   .accordion-header:hover {
     border-color:var(--neon-pink);
-    box-shadow:0 0 26px rgba(232,29,137,.75),0 0 40px rgba(232,29,137,.4);
+    box-shadow:0 0 32px rgba(232,29,137,.8);
     transform:translateY(-2px);
   }
 
   .accordion-label {
-    font-size: clamp(20px,2.5vw,28px);
-    letter-spacing:0.2em;
+    font-size: clamp(20px,2.6vw,30px);
+    letter-spacing:0.25em;
     color:var(--neon-pink);
     text-transform:uppercase;
     text-shadow:0 0 14px var(--neon-pink-soft);
     position:relative;
   }
 
-  /* 🔥 Ink Dripping From Letters */
   .accordion-header:hover .accordion-label::before {
     content:"";
     position:absolute;
@@ -137,10 +152,9 @@
     border-radius:50%;
     filter:drop-shadow(0 0 12px rgba(232,29,137,0.8));
     transform:translateX(-50%);
-    animation:dripFall 1.3s ease forwards;
+    animation:dripFall 1.2s ease forwards;
   }
 
-  /* Accordion content */
   .accordion-content {
     max-height:0;
     overflow:hidden;
@@ -149,52 +163,51 @@
     border:2px solid rgba(232,29,137,0.25);
     border-top:none;
     margin-top:-2px;
-    padding:0 24px;
+    padding:0 22px;
     transition:max-height .32s ease,padding .25s ease;
   }
-  .accordion-content.open { max-height:260px; padding:18px 24px 24px; }
 
-  .accordion-text { text-align:center; line-height:1.7; opacity:0.92; }
+  .accordion-content.open { max-height:220px; padding:18px 22px 22px; }
 
-  a.roadmap-link {
-    text-decoration: none;
-    color: var(--neon-pink);
-    font-weight: bold;
-  }
+  .accordion-text { text-align:center; line-height:1.65; opacity:0.92; }
 
+  .roadmap-link { color: var(--neon-pink); font-weight: bold; }
 </style>
 </head>
 
 <body>
 
-<!-- 🔥 Sticky glass neon title -->
+<!-- 🔥 Sticky Header with Nav -->
 <div class="sticky-header">
-  <div class="top-title" onclick="window.scrollTo({top:0,behavior:'smooth'});">$DREW</div>
+  <div class="top-title" onclick="window.scrollTo({top:0, behavior:'smooth'})">$DREW</div>
+
+  <div class="nav-links">
+    <div class="nav-link" onclick="scrollToSection('token')">Token</div>
+    <div class="nav-link" onclick="scrollToSection('nfts')">NFTs</div>
+    <div class="nav-link" onclick="scrollToSection('movement')">Movement</div>
+    <div class="nav-link" onclick="scrollToSection('pit')">Pit</div>
+  </div>
 </div>
 
 <div class="page">
 
-  <section class="hero">
-    <div class="heading">$DREW</div>
-    <div class="divider"></div>
-    <p class="subheading">Our mission is to support men’s mental health together.</p>
-  </section>
+  <section id="movement" class="accordion-wrapper">
 
-  <section class="accordion-wrapper">
-
+    <!-- 🔗 Mission -->
     <div class="accordion-item">
-      <div class="accordion-header"><span class="accordion-label">MISSION</span></div>
+      <div class="accordion-header"><span class="accordion-label">Mission</span></div>
       <div class="accordion-content"><p class="accordion-text">Meaningful support starts with real conversation…</p></div>
     </div>
 
+    <!-- 🔗 Community -->
     <div class="accordion-item">
-      <div class="accordion-header"><span class="accordion-label">COMMUNITY</span></div>
+      <div class="accordion-header"><span class="accordion-label">Community</span></div>
       <div class="accordion-content"><p class="accordion-text">Holders lead donations and shape initiatives…</p></div>
     </div>
 
-    <!-- Roadmap now drops down -->
+    <!-- 🔗 Roadmap -->
     <div class="accordion-item">
-      <div class="accordion-header"><span class="accordion-label">ROADMAP</span></div>
+      <div class="accordion-header"><span class="accordion-label">Roadmap</span></div>
       <div class="accordion-content">
         <p class="accordion-text">
           View our roadmap here: <br><br>
@@ -203,36 +216,49 @@
       </div>
     </div>
 
-    <div class="accordion-item">
-      <div class="accordion-header"><span class="accordion-label">NFTS</span></div>
+    <!-- 🔗 NFTs -->
+    <div id="nfts" class="accordion-item">
+      <div class="accordion-header"><span class="accordion-label">NFTs</span></div>
       <div class="accordion-content"><p class="accordion-text">888 genesis access NFTs…</p></div>
     </div>
 
-    <div class="accordion-item">
-      <div class="accordion-header"><span class="accordion-label">$DREW TOKEN</span></div>
+    <!-- 🔗 Token -->
+    <div id="token" class="accordion-item">
+      <div class="accordion-header"><span class="accordion-label">$DREW Token</span></div>
       <div class="accordion-content"><p class="accordion-text">$DREW rewards committed holders…</p></div>
     </div>
 
-  </section>
+    <!-- 🔗 Movement -->
+    <div class="accordion-item">
+      <div class="accordion-header"><span class="accordion-label">Movement</span></div>
+      <div class="accordion-content"><p class="accordion-text">This is bigger than crypto — it’s a wave of support…</p></div>
+    </div>
 
+    <!-- 🔗 Pit -->
+    <div id="pit" class="accordion-item">
+      <div class="accordion-header"><span class="accordion-label">Pit</span></div>
+      <div class="accordion-content"><p class="accordion-text">Where the real battles are fought — together…</p></div>
+    </div>
+
+  </section>
 </div>
 
 <script>
-// 🔄 AUTO-CLOSE others when one opens
-document.querySelectorAll('.accordion-item').forEach(item=>{
-  const header=item.querySelector('.accordion-header');
-  const content=item.querySelector('.accordion-content');
+// Auto-close others
+document.querySelectorAll('.accordion-header').forEach(header=>{
   header.addEventListener('click',()=>{
-
-    // Close ALL others first
+    const content = header.nextElementSibling;
     document.querySelectorAll('.accordion-content').forEach(c=>{
       if(c!==content) c.classList.remove('open');
     });
-
-    // Then toggle this one
     content.classList.toggle('open');
   });
 });
+
+// Smooth scroll to sections
+function scrollToSection(id){
+  document.getElementById(id).scrollIntoView({behavior:'smooth'});
+}
 </script>
 
 </body>
